--- a/adam/index.html
+++ b/adam/index.html
@@ -132,8 +132,9 @@
                 <h2 class="text-3xl font-bold text-center mb-8" style="color: var(--color-primary);">Professional Experience</h2>
                 <div class="space-y-6">
                     <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="text-xl font-semibold mb-2" style="color: var(--color-accent);">Senior Manager Technology</h3>
-                        <p class="text-sm mb-2" style="color: var(--color-secondary);">COACHING SEASON | April 2023 – Present | San Francisco, CA</p>
+                        <h3 class="text-xl font-semibold mb-2" style="color: var(--color-accent);">COACHING SEASON</h3>
+                        <p class="text-lg mb-2" style="color: var(--color-secondary);">Senior Manager Technology</p>
+                        <p class="text-sm mb-2">April 2023 – Present | San Francisco, CA</p>
                         <ul class="list-disc list-inside">
                             <li>Early-stage coaching startup aimed at democratizing career growth. Integrated Generative AI to enhance user experiences, streamline responses, and personalize coaching pathways.</li>
                             <li>Led strategic software evaluation and implementation, achieving 20% cost savings through CRM selection.</li>
@@ -141,8 +142,9 @@
                         </ul>
                     </div>
                     <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="text-xl font-semibold mb-2" style="color: var(--color-accent);">Principal Product Manager, Product Innovation</h3>
-                        <p class="text-sm mb-2" style="color: var(--color-secondary);">VERIZON | Oct 2019 – Apr 2023 | San Francisco, CA</p>
+                        <h3 class="text-xl font-semibold mb-2" style="color: var(--color-accent);">VERIZON</h3>
+                        <p class="text-lg mb-2" style="color: var(--color-secondary);">Principal Product Manager, Product Innovation</p>
+                        <p class="text-sm mb-2">Oct 2019 – Apr 2023 | San Francisco, CA</p>
                         <ul class="list-disc list-inside">
                             <li>Drove user-centric product innovation serving 20M+ customers and secured a patent for features in Verizon Messages.</li>
                             <li>Achieved a 4+ star rating and tripled subscriptions for the Verizon My Numbers app, increasing revenue by 60%.</li>
@@ -150,48 +152,54 @@
                         </ul>
                     </div>
                     <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="text-xl font-semibold mb-2" style="color: var(--color-accent);">Growth Product Manager (Contract)</h3>
-                        <p class="text-sm mb-2" style="color: var(--color-secondary);">WELLS FARGO | Nov 2018 – Oct 2019 | San Francisco, CA</p>
+                        <h3 class="text-xl font-semibold mb-2" style="color: var(--color-accent);">WELLS FARGO</h3>
+                        <p class="text-lg mb-2" style="color: var(--color-secondary);">Growth Product Manager (Contract)</p>
+                        <p class="text-sm mb-2">Nov 2018 – Oct 2019 | San Francisco, CA</p>
                         <ul class="list-disc list-inside">
                             <li>Boosted app engagement by 20% through improved onboarding and customer journeys for the Greenhouse app.</li>
                             <li>Increased user acquisition by 20% with an incentivized referral system and implemented a comprehensive communication roadmap, enhancing the customer experience.</li>
                         </ul>
                     </div>
                     <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="text-xl font-semibold mb-2" style="color: var(--color-accent);">Senior Product Manager/Product Owner – Small Business Mobile</h3>
-                        <p class="text-sm mb-2" style="color: var(--color-secondary);">CAPITAL ONE | Apr 2015 – Jan 2018 | San Francisco, CA</p>
+                        <h3 class="text-xl font-semibold mb-2" style="color: var(--color-accent);">CAPITAL ONE</h3>
+                        <p class="text-lg mb-2" style="color: var(--color-secondary);">Senior Product Manager/Product Owner – Small Business Mobile</p>
+                        <p class="text-sm mb-2">Apr 2015 – Jan 2018 | San Francisco, CA</p>
                         <ul class="list-disc list-inside">
                             <li>Managed mobile strategy for the Spark Business app, introducing data-informed UX flows that improved deposit success by 10%.</li>
                             <li>Increased app downloads by 30% and ratings from 3 to 4.5+ stars through data analysis, user feedback, and A/B testing.</li>
                         </ul>
                     </div>
                     <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="text-xl font-semibold mb-2" style="color: var(--color-accent);">Principal Product Manager – Mobile Social Casino</h3>
-                        <p class="text-sm mb-2" style="color: var(--color-secondary);">OPENWAGER | May 2014 – Apr 2015 | San Francisco, CA</p>
+                        <h3 class="text-xl font-semibold mb-2" style="color: var(--color-accent);">OPENWAGER</h3>
+                        <p class="text-lg mb-2" style="color: var(--color-secondary);">Principal Product Manager – Mobile Social Casino</p>
+                        <p class="text-sm mb-2">May 2014 – Apr 2015 | San Francisco, CA</p>
                         <ul class="list-disc list-inside">
                             <li>Led the development and launch of USA Today's first real-time mobile multiplayer game, achieving a 10x ROI in the first year and a 40% increase in monetization.</li>
                             <li>Developed a proprietary analytics platform to measure product performance and improve ARM metrics.</li>
                         </ul>
                     </div>
                     <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="text-xl font-semibold mb-2" style="color: var(--color-accent);">Director, Product Management</h3>
-                        <p class="text-sm mb-2" style="color: var(--color-secondary);">TOUT | Jun 2013 – May 2014 | San Francisco, CA</p>
+                        <h3 class="text-xl font-semibold mb-2" style="color: var(--color-accent);">TOUT</h3>
+                        <p class="text-lg mb-2" style="color: var(--color-secondary);">Director, Product Management</p>
+                        <p class="text-sm mb-2">Jun 2013 – May 2014 | San Francisco, CA</p>
                         <ul class="list-disc list-inside">
                             <li>Enhanced digital storytelling through mobile video editing features on iOS and Android, achieving a 4.5+ star rating and media coverage from outlets like The Wall Street Journal and ESPN.</li>
                             <li>Drove user engagement for a 46M-strong base across 2,800+ websites, integrating gamification and optimizing user flows.</li>
                         </ul>
                     </div>
                     <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="text-xl font-semibold mb-2" style="color: var(--color-accent);">Principal Product Manager, Mobile Games</h3>
-                        <p class="text-sm mb-2" style="color: var(--color-secondary);">ATARI | May 2012 – May 2013 | San Francisco, CA</p>
+                        <h3 class="text-xl font-semibold mb-2" style="color: var(--color-accent);">ATARI</h3>
+                        <p class="text-lg mb-2" style="color: var(--color-secondary);">Principal Product Manager, Mobile Games</p>
+                        <p class="text-sm mb-2">May 2012 – May 2013 | San Francisco, CA</p>
                         <ul class="list-disc list-inside">
                             <li>Played a key role in launching RollerCoaster Tycoon for iOS and Android, defining the product roadmap and executing post-launch strategies.</li>
                             <li>Successfully launched Atari's first social mobile gaming application.</li>
                         </ul>
                     </div>
                     <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="text-xl font-semibold mb-2" style="color: var(--color-accent);">Principal Product Manager, Mobile Division</h3>
-                        <p class="text-sm mb-2" style="color: var(--color-secondary);">iWIN | Jun 2011 – May 2012 | San Francisco, CA</p>
+                        <h3 class="text-xl font-semibold mb-2" style="color: var(--color-accent);">iWIN</h3>
+                        <p class="text-lg mb-2" style="color: var(--color-secondary);">Principal Product Manager, Mobile Division</p>
+                        <p class="text-sm mb-2">Jun 2011 – May 2012 | San Francisco, CA</p>
                         <ul class="list-disc list-inside">
                             <li>Developed product roadmaps and led the successful launch of freemium mobile titles 1v100 and Deal or No Deal, strengthening in-app purchasing through partnerships with mobile social platforms.</li>
                             <li>Enhanced game quality by establishing KPIs and monitoring metrics for performance improvements.</li>
