--- a/index.htm
+++ b/index.htm
@@ -197,7 +197,7 @@
                                 alt="HVAC.COM Replace Landing Page"
                                 class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
                         </div>
-                        <div class="flex flex-wrap gap-2 mt-4">
+                        <div class="skills-container flex flex-wrap gap-2">
                             <span class="bg-gray-200 text-sm text-gray-700 py-1 px-3 rounded-full">Product Lifecycle
                                 Management</span>
                             <span class="bg-gray-200 text-sm text-gray-700 py-1 px-3 rounded-full">Conversion Rate
@@ -255,7 +255,7 @@
                                 alt="HURD AI mobile web app detail"
                                 class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
                         </div>
-                        <div class="flex flex-wrap gap-2 mt-4">
+                        <div class="skills-container flex flex-wrap gap-2">
                             <span class="bg-gray-200 text-sm text-gray-700 py-1 px-3 rounded-full">Natural Language
                                 Processing (NLP)</span>
                             <span class="bg-gray-200 text-sm text-gray-700 py-1 px-3 rounded-full">AI-Powered
@@ -318,7 +318,7 @@
                                 alt="Lever bulk candidate importer"
                                 class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
                         </div>
-                        <div class="flex flex-wrap gap-2 mt-4">
+                        <div class="skills-container flex flex-wrap gap-2">
                             <span class="bg-gray-200 text-sm text-gray-700 py-1 px-3 rounded-full">HRIS
                                 Integration</span>
                             <span class="bg-gray-200 text-sm text-gray-700 py-1 px-3 rounded-full">API
@@ -402,7 +402,7 @@
                                 </svg>
                             </div>
                         </div>
-                        <div class="flex flex-wrap gap-2 mt-4">
+                        <div class="skills-container flex flex-wrap gap-2">
                             <span class="bg-gray-200 text-sm text-gray-700 py-1 px-3 rounded-full">Fraud
                                 Prevention</span>
                             <span class="bg-gray-200 text-sm text-gray-700 py-1 px-3 rounded-full">Strategic
@@ -469,7 +469,7 @@
                                 alt="Legal document interview"
                                 class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
                         </div>
-                        <div class="flex flex-wrap gap-2 mt-4">
+                        <div class="skills-container flex flex-wrap gap-2">
                             <span class="bg-gray-200 text-sm text-gray-700 py-1 px-3 rounded-full">Mobile Conversion
                                 Optimization</span>
                             <span class="bg-gray-200 text-sm text-gray-700 py-1 px-3 rounded-full">Analytics Tools
@@ -526,7 +526,7 @@
                             <img src="https://middleton.io/images/oracle-engage-v2.png" alt="Oracle Engage v2"
                                 class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
                         </div>
-                        <div class="flex flex-wrap gap-2 mt-4">
+                        <div class="skills-container flex flex-wrap gap-2">
                             <span class="bg-gray-200 text-sm text-gray-700 py-1 px-3 rounded-full">Global Product
                                 Rollouts</span>
                             <span
