--- a/index.htm
+++ b/index.htm
@@ -287,8 +287,7 @@
                             </div>
                         </div>
                         <p class="text-gray-600 mb-4">2021 — 2023 | San Francisco, CA</p>
-                        <p class="text-gray-700 mb-4">Created and drove the HRIS Sync product area from inception to
-                            launch, developing key API endpoints to synchronize Human Resources Information Systems
+                        <p class="text-gray-700 mb-4">Created and drove the HRIS Sync product area, developing key API endpoints to synchronize Human Resources Information Systems
                             (HRIS) and Lever. Launched features that improved user profiles and enabled org chart-aware
                             proxy approval for requisitions, postings, and offers. Achieved a <strong>37% product
                                 engagement rate</strong> in the first quarter and drove improvements in <strong>Time to
@@ -449,8 +448,7 @@
                             <li><span class="font-semibold">Product Integration:</span> Boosted eSign start rates by
                                 <strong>13%</strong> through the integration of Legal Documents with RocketSign.
                             </li>
-                            <li><span class="font-semibold">Data Instrumentation:</span> Achieved record-breaking
-                                conversion rates by developing custom analytics tools linking platform performance with
+                            <li><span class="font-semibold">Data Instrumentation:</span> Achieved higest recorded conversion rates by developing custom analytics tools linking platform performance with
                                 conversion metrics.</li>
                             <li><span class="font-semibold">Strategic Planning:</span> Collaborated with
                                 cross-functional teams and C-suite leadership to define and maintain product roadmaps
