--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Kevin Middleton is a Full-Stack Product Manager with 10+ years of experience building consumer, enterprise, and platform SaaS products.">
     <meta property="og:url" content="https://middleton.io">
-    <meta property="og:image" content="https://middleton.io/images/HeyThere.png">
+    <meta property="og:image" content="https://middleton.io/images/kevin-middleton-saas-product-manager.jpg">
 
     <meta property="og:type" content="website">
     <!-- Microsoft Clarity -->
