--- a/index.htm
+++ b/index.htm
@@ -167,7 +167,7 @@
                                 <h4 class="text-xl font-semibold text-gray-700">Senior Product Manager, Growth</h4>
                             </div>
                         </div>
-                        <p class="text-gray-600 mb-4">2024 — Present | Charlotte, NC</p>
+                        <p class="text-gray-600 mb-4">2024 — Present | New York, NY</p>
                         <p class="text-gray-700 mb-4">Oversee all HVAC.com features, user experiences, and operations,
                             delivering measurable value for homeowners and internal teams on a platform with <strong>~2M
                                 annual visits</strong>.
