--- a/index.htm
+++ b/index.htm
@@ -1157,7 +1157,7 @@
 
     <footer class="bg-gray-800 text-white py-8">
         <div class="container mx-auto px-4 text-center">
-            <a href="https://github.com/kevinmmiddleton/about/raw/main/Kevin%20Middleton%20-%20Senior%20Product%20Manager%2012-15-2024.pdf"
+            <a href="https://raw.githubusercontent.com/kevinmmiddleton/about/main/Kevin%20Middleton%20-%20Senior%20Product%20Manager%2012-22-2024.pdf"
                 download
                 class="inline-block bg-white text-blue-500 px-6 py-3 rounded-full hover:bg-gray-200 transition-colors mb-4">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline-block mr-2" fill="none"
