--- a/liquid-index.html
+++ b/liquid-index.html
@@ -53,47 +53,46 @@
         </nav>
     </header>
     <main class="pt-16 overflow-x-hidden">
-        <section id="hero"
-            class="min-h-screen flex flex-col items-center justify-start pt-16 md:pt-0 md:justify-start relative gradient-bg-1">
-            <div class="text-center mb-4 md:mb-6 md:mt-20">
-                <h1 class="text-4xl font-bold text-white mb-2">Kevin Middleton</h1>
-                <p class="text-xl text-white">Full Stack Product Manager</p>
-                <div class="text-sm text-white mt-2">📍 New York City</div>
-            </div>
-            <div class="text-center z-10 px-4 md:px-0 w-full max-w-5xl mx-auto mb-16">
-                <div class="flex justify-center space-x-4 items-center mb-4 md:mb-6">
-                    <a href="#experience"
-                        class="inline-flex items-center justify-center bg-white text-blue-500 px-6 py-3 rounded-full hover:bg-gray-200 transition-colors">
-                        See My Work
-                    </a>
-                    <a href="#about"
-                        class="inline-flex items-center justify-center bg-transparent text-white border-2 border-white px-6 py-3 rounded-full hover:bg-white hover:text-blue-500 transition-colors">
-                        About Me
-                    </a>
-                </div>
-                <div class="max-w-4xl mx-auto bg-white bg-opacity-10 rounded-lg shadow-xl p-3 sm:p-4 md:p-6 mb-8">
-                    <div class="hero-title-container font-bold mb-4 sm:mb-6 text-center text-white">
-                        <span id="hero-title" class="hero-title">
-                            Building Consumer, Enterprise, and Platform SaaS Products
-                        </span>
-                    </div>
-                    <p class="text-sm sm:text-base md:text-lg text-white leading-relaxed">
-                        With 10+ years of experience driving product strategies, I turn complex challenges into
-                        scalable, data-driven solutions. My work spans diverse industries—social media, legal tech,
-                        marketing tech, HR, EdTech, and HVAC—delivering measurable growth and product success.
-                    </p>
-                </div>
-                <div class="w-full flex justify-center mb-8">
-                    <div class="animate-bounce">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-white" fill="none"
-                            viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M19 14l-7 7m0 0l-7-7m7 7V3" />
-                        </svg>
-                    </div>
-                </div>
-            </div>
-        </section>
+<section class="hero gradient-bg-1 min-h-screen flex flex-col items-center justify-start pt-16 md:pt-0 md:justify-start relative" id="hero">
+  <div class="text-center mb-4 md:mb-6 md:mt-20">
+    <h1 class="text-4xl font-bold text-white mb-2">Kevin Middleton</h1>
+    <p class="text-xl text-white">Full Stack Product Manager</p>
+    <div class="text-sm text-white mt-2">📍 New York City</div>
+  </div>
+
+  <div class="text-center z-10 px-4 md:px-0 w-full max-w-5xl mx-auto mb-16">
+    <div class="flex justify-center space-x-4 items-center mb-4 md:mb-6">
+      <a href="#experience" class="cta-glass">
+        See My Work
+      </a>
+      <a href="#about" class="cta-outline">
+        About Me
+      </a>
+    </div>
+
+    <div class="glass mb-8">
+      <div class="hero-title-container font-bold mb-4 sm:mb-6 text-center text-white">
+        <span id="hero-title" class="hero-title">
+          Building Consumer, Enterprise, and Platform SaaS Products
+        </span>
+      </div>
+      <p class="text-sm sm:text-base md:text-lg text-white leading-relaxed">
+        With 10+ years of experience driving product strategies, I turn complex challenges into
+        scalable, data-driven solutions. My work spans diverse industries—social media, legal tech,
+        marketing tech, HR, EdTech, and HVAC—delivering measurable growth and product success.
+      </p>
+    </div>
+
+    <div class="w-full flex justify-center mb-8">
+      <div class="animate-bounce">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 14l-7 7m0 0l-7-7m7 7V3" />
+        </svg>
+      </div>
+    </div>
+  </div>
+</section>
+
 
         <section id="about" class="py-20 gradient-bg-2">
             <div class="container content-container mx-auto px-4">
