--- a/liquid-index.html
+++ b/liquid-index.html
@@ -19,10 +19,23 @@
       </div>
     </header>
 
+    <!-- Intro Banner -->
+    <section id="site-intro" class="gradient-bg-2 content-container">
+      <div class="container">
+        <div class="glass" style="max-width: 800px; margin: 0 auto; text-align: center;">
+          <h2>Building Consumer, Enterprise, and Platform SaaS Products</h2>
+          <p>
+            With 10+ years of experience driving product strategies, I turn complex challenges into scalable, data-driven solutions.
+            My work spans diverse industries—social media, legal tech, marketing tech, HR, EdTech, and HVAC—delivering measurable growth and product success.
+          </p>
+        </div>
+      </div>
+    </section>
+
     <!-- About Section -->
     <section id="about" class="gradient-bg-2 content-container">
       <div class="container">
-        <div class="glass">
+        <div class="glass with-depth">
           <h2>About Me</h2>
           <p>I'm Kevin Middleton — a multidisciplinary designer and developer focused on crafting intuitive, elegant digital interfaces. I specialize in building systems that scale, with a strong emphasis on accessibility, performance, and user experience.</p>
         </div>
@@ -32,13 +45,13 @@
     <!-- Experience Section -->
     <section id="experience" class="gradient-bg-3 content-container">
       <div class="container">
-        <div class="glass">
+        <div class="glass with-depth">
           <h2>Experience</h2>
-          <div class="project-card">
+          <div class="project-card glass subtle-hover">
             <h3>Principal Designer, ThoughtWorks</h3>
             <p>Led design strategy and system implementation across large-scale client platforms.</p>
           </div>
-          <div class="project-card">
+          <div class="project-card glass subtle-hover">
             <h3>Lead UX Engineer, Freelance</h3>
             <p>Collaborated with cross-functional teams to ship modern web apps for health, education, and tech sectors.</p>
           </div>
@@ -49,12 +62,12 @@
     <!-- Core Values / Ideals Section -->
     <section id="ideals" class="gradient-bg-4 content-container">
       <div class="container">
-        <div class="glass">
+        <div class="glass with-depth">
           <h2>Core Values</h2>
           <div class="ideals-slider">
             <div class="mask">
               <div class="slide active">
-                <div class="ideals-item">
+                <div class="ideals-item glass light-glow">
                   <div class="ideals-icon">💡</div>
                   <div class="ideals-title">Clarity</div>
                   <div class="ideals-paragraph">Good design simplifies complexity. I strive for interfaces that make sense without explanation.</div>
@@ -62,7 +75,7 @@
                 </div>
               </div>
               <div class="slide">
-                <div class="ideals-item">
+                <div class="ideals-item glass light-glow">
                   <div class="ideals-icon">⚙️</div>
                   <div class="ideals-title">Precision</div>
                   <div class="ideals-paragraph">I obsess over details — spacing, contrast, and flow matter as much as functionality.</div>
@@ -70,7 +83,7 @@
                 </div>
               </div>
               <div class="slide">
-                <div class="ideals-item">
+                <div class="ideals-item glass light-glow">
                   <div class="ideals-icon">🚀</div>
                   <div class="ideals-title">Momentum</div>
                   <div class="ideals-paragraph">Great work happens iteratively. I move fast, but thoughtfully — balancing speed with craft.</div>
@@ -91,17 +104,17 @@
     <!-- Projects Section -->
     <section id="projects" class="gradient-bg-5 content-container">
       <div class="container">
-        <div class="glass">
+        <div class="glass with-depth">
           <h2>Featured Projects</h2>
-          <div class="project-card">
+          <div class="project-card glass subtle-hover">
             <h3>Design System</h3>
             <p>A scalable design system built for cross-platform consistency and rapid iteration.</p>
           </div>
-          <div class="project-card">
+          <div class="project-card glass subtle-hover">
             <h3>Data Dashboard</h3>
             <p>Custom analytics interface for realtime decision making in logistics.</p>
           </div>
-          <div class="project-card">
+          <div class="project-card glass subtle-hover">
             <h3>Interactive Learning</h3>
             <p>Built a responsive, WCAG-compliant education tool for students and teachers.</p>
           </div>
@@ -112,7 +125,7 @@
     <!-- Footer -->
     <footer class="gradient-bg-11">
       <div class="container">
-        <div class="glass">
+        <div class="glass with-depth">
           <p>&copy; 2025 Kevin M. Middleton. Built with purpose, clarity, and coffee.</p>
         </div>
       </div>
