--- a/liquid-index.html
+++ b/liquid-index.html
@@ -10,6 +10,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
   </head>
   <body>
+    <!-- Navigation -->
+    <nav class="glass glass-nav">
+      <div class="container nav-wrapper">
+        <div id="header-name">
+          <a href="#" class="logo">Middleton.io</a>
+        </div>
+        <div id="menu-toggle">☰</div>
+        <ul id="menu">
+          <li><a href="#about">About</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#ideals">Values</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+
     <!-- Hero Section -->
     <header class="hero gradient-bg-1">
       <div class="glass">
