--- a/liquid-index.html
+++ b/liquid-index.html
@@ -28,7 +28,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <header class="hero gradient-bg-1">
+    <header class="hero">
       <div class="glass">
         <h1>Welcome to Middleton.io</h1>
         <p>Crafting thoughtful digital experiences with purpose and precision.</p>
@@ -37,7 +37,7 @@
     </header>
 
     <!-- Intro Banner -->
-    <section id="site-intro" class="gradient-bg-2 content-container">
+    <section id="site-intro">
       <div class="container">
         <div class="glass" style="max-width: 800px; margin: 0 auto; text-align: center;">
           <h2>Building Consumer, Enterprise, and Platform SaaS Products</h2>
@@ -50,7 +50,7 @@
     </section>
 
     <!-- About Section -->
-    <section id="about" class="gradient-bg-2 content-container">
+    <section id="about">
       <div class="container">
         <div class="glass with-depth">
           <h2>About Me</h2>
@@ -60,7 +60,7 @@
     </section>
 
     <!-- Experience Section -->
-    <section id="experience" class="gradient-bg-3 content-container">
+    <section id="experience">
       <div class="container">
         <div class="glass with-depth">
           <h2>Experience</h2>
@@ -77,7 +77,7 @@
     </section>
 
     <!-- Core Values / Ideals Section -->
-    <section id="ideals" class="gradient-bg-4 content-container">
+    <section id="ideals">
       <div class="container">
         <div class="glass with-depth">
           <h2>Core Values</h2>
@@ -119,7 +119,7 @@
     </section>
 
     <!-- Projects Section -->
-    <section id="projects" class="gradient-bg-5 content-container">
+    <section id="projects">
       <div class="container">
         <div class="glass with-depth">
           <h2>Featured Projects</h2>
@@ -140,7 +140,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="gradient-bg-11">
+    <footer>
       <div class="container">
         <div class="glass with-depth">
           <p>&copy; 2025 Kevin M. Middleton. Built with purpose, clarity, and coffee.</p>
