--- a/liquid-index.html
+++ b/liquid-index.html
@@ -1,4 +1,94 @@
-<script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Liquid Glass Site</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+</head>
+<body>
+  <!-- Navigation -->
+  <nav class="glass glass-nav">
+    <div class="container nav-wrapper">
+      <div id="header-name" class="logo hidden">My Brand</div>
+      <div id="menu-toggle">☰</div>
+      <ul id="menu">
+        <li><a href="#hero">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- Hero -->
+  <header id="hero" class="hero-section">
+    <div class="glass hero-content">
+      <h1>Welcome to My Site</h1>
+      <p>Crafting thoughtful digital experiences with purpose and precision.</p>
+      <a href="#projects" class="cta">View My Work</a>
+    </div>
+  </header>
+
+  <!-- Content Sections -->
+  <section id="about">
+    <div class="container">
+      <div class="glass with-depth">
+        <h2>About</h2>
+        <p>Write about yourself here...</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="services">
+    <div class="container">
+      <div class="glass with-depth">
+        <h2>Services</h2>
+        <p>List your offerings here...</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="projects">
+    <div class="container">
+      <div class="glass with-depth">
+        <h2>Projects</h2>
+        <div class="project-card glass subtle-hover">
+          <h3>Project Title</h3>
+          <p>Project description...</p>
+        </div>
+        <div class="project-card glass subtle-hover">
+          <h3>Project Title</h3>
+          <p>Project description...</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="contact">
+    <div class="container">
+      <div class="glass with-depth">
+        <h2>Contact</h2>
+        <p>Email: your@email.com</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <div class="container">
+      <div class="glass with-depth">
+        <p>&copy; 2025 Your Name. All rights reserved.</p>
+      </div>
+    </div>
+  </footer>
+
+  <!-- JS for nav toggle & scroll -->
+  <script>
   (function () {
     const menu = document.getElementById('menu');
     const toggle = document.getElementById('menu-toggle');
@@ -72,3 +162,5 @@
     });
   })();
 </script>
+</body>
+</html>
