--- a/liquid-index.html
+++ b/liquid-index.html
@@ -90,76 +90,43 @@
   <!-- JS for nav toggle & scroll -->
   <script>
   (function () {
+    const btn = document.getElementById('menu-toggle');
     const menu = document.getElementById('menu');
-    const toggle = document.getElementById('menu-toggle');
-    const headerName = document.getElementById('header-name');
-    const hero = document.getElementById('hero');
 
-    // Toggle mobile menu
+    // Accessibility niceties
+    btn.setAttribute('aria-expanded', 'false');
+    btn.setAttribute('aria-controls', 'menu');
+
     function openMenu() {
-      menu.classList.add('flex');          // your CSS uses #menu.flex
-      toggle.setAttribute('aria-expanded', 'true');
-      document.addEventListener('click', onOutsideClick);
-      document.addEventListener('keydown', onEsc);
+      menu.classList.add('flex');         // your CSS shows the panel when #menu.flex is present
+      btn.setAttribute('aria-expanded', 'true');
+      document.addEventListener('click', outsideClose);
+      document.addEventListener('keydown', escClose);
     }
+
     function closeMenu() {
       menu.classList.remove('flex');
-      toggle.setAttribute('aria-expanded', 'false');
-      document.removeEventListener('click', onOutsideClick);
-      document.removeEventListener('keydown', onEsc);
+      btn.setAttribute('aria-expanded', 'false');
+      document.removeEventListener('click', outsideClose);
+      document.removeEventListener('keydown', escClose);
     }
-    function onOutsideClick(e) {
-      if (!menu.contains(e.target) && !toggle.contains(e.target)) closeMenu();
+
+    function toggleMenu(e) {
+      e.stopPropagation();
+      if (menu.classList.contains('flex')) closeMenu(); else openMenu();
     }
-    function onEsc(e) {
+
+    function outsideClose(e) {
+      if (!menu.contains(e.target) && e.target !== btn) closeMenu();
+    }
+
+    function escClose(e) {
       if (e.key === 'Escape') closeMenu();
     }
 
-    toggle.setAttribute('aria-controls', 'menu');
-    toggle.setAttribute('aria-expanded', 'false');
-    toggle.addEventListener('click', () => {
-      menu.classList.contains('flex') ? closeMenu() : openMenu();
-    });
-
-    // Close menu when a link is clicked (useful on mobile)
-    menu.querySelectorAll('a').forEach(a =>
-      a.addEventListener('click', () => closeMenu())
-    );
-
-    // Show name in header after hero is scrolled past
-    const heroBottom = () => (hero ? hero.offsetTop + hero.offsetHeight : 120);
-    function onScroll() {
-      if (window.scrollY > heroBottom() - 80) {
-        headerName.classList.remove('hidden');
-      } else {
-        headerName.classList.add('hidden');
-      }
-    }
-    onScroll();
-    window.addEventListener('scroll', onScroll, { passive: true });
-
-    // Fix state on resize (e.g., going from mobile to desktop)
-    let lastIsMobile = window.innerWidth < 768;
-    window.addEventListener('resize', () => {
-      const isMobile = window.innerWidth < 768;
-      if (lastIsMobile !== isMobile) {
-        closeMenu(); // reset menu state
-        lastIsMobile = isMobile;
-      }
-    });
-
-    // Optional: smooth-scroll offset for fixed header
-    document.querySelectorAll('a[href^="#"]').forEach(link => {
-      link.addEventListener('click', e => {
-        const id = link.getAttribute('href');
-        const target = document.querySelector(id);
-        if (!target) return;
-        e.preventDefault();
-        const headerHeight = document.querySelector('header')?.offsetHeight || 64;
-        const y = target.getBoundingClientRect().top + window.pageYOffset - headerHeight - 8;
-        window.scrollTo({ top: y, behavior: 'smooth' });
-      });
-    });
+    btn.addEventListener('click', toggleMenu);
+    // Prevent clicks inside the menu from bubbling up and closing it
+    menu.addEventListener('click', e => e.stopPropagation());
   })();
 </script>
 </body>
